--- a/public/css/engine.css
+++ b/public/css/engine.css
@@ -2,11 +2,10 @@ body{
 	background:#e1e1e1;
 	font-family:Arial, Helvetica, sans-serif;
 }
-
-#main{
+#main-wrapper{
 	margin: 30px auto;
-	width:600px;
-	height:200px;
+	width:960px;
+	height:650px;
 	padding:20px;
 	background:#ffffff;
 	border:solid 1px #cccccc;
@@ -14,14 +13,74 @@ body{
 	-webkit-border-radius: 10px;
 	box-shadow: 0px 3px 5px #666666;
 	-webkit-box-shadow: 0px 3px 5px #666666;
+	position:relative;
 }
-#main header{
+#main-wrapper header{
 	font-size:20px;
 	color:#666666;
 	font-weight:bold;
 }
-
+#main-wrapper a#lv-select-trigger{
+	border: solid 2px #ffffff;
+	padding: 5px 10px;
+	background:#ff0000;
+	font-size: 13px;
+	font-weight:bold;
+	box-shadow: 0px 0px 5px #666666;
+	-webkit-box-shadow: 0px 0px 5px #666666;
+	-o-box-shadow: 0px 0px 5px #666666;
+	border-radius:10px;
+	-webkit-border-radius:10px;
+	-o-border-radius:10px;
+	position:absolute;
+	right:20px;
+	color:#ffffff;
+	text-decoration:none;
+}
 footer{
 	margin:0px auto;
 	width:600px;
+}
+#modal-bg{
+	
+	position:absolute;
+	top:0px;
+	left:0px;
+	right:0px;
+	bottom:0px;
+	background: rgba(0,0,0, .5);
+	transition: opacity 1s ease-in;
+	-moz-transition: opacity 1s ease-in;
+	-webkit-animation: opacity 1s ease-in;
+	-ms-transition: opacity 1s ease-in;
+	-o-transition: opacity 1s ease-in;
+}
+#modal-bg #level-select{
+	margin:30px auto;
+	width:600px;
+	height:200px;
+	padding:20px;
+	background:#ffffff;
+	border-radius:10px;
+	-webkit-border-radius:10px;
+	-o-border-radius:10px;
+	box-shadow: 0px 5px 10px #000000;
+	-webkit-box-shadow: 0px 5px 10px #000000;
+	-o-box-shadow: 0px 5px 10px #000000;
+}
+.fade-in{
+	opacity:1;
+	transition: opacity 1s;
+	-moz-transition: opacity 1s;
+	-webkit-animation: opacity 1s;
+	-ms-transition: opacity 1s;
+	-o-transition: opacity 1s;
+}
+.fade-out{
+	opacity:0;
+	transition: opacity 1s;
+	-moz-transition: opacity 1s;
+	-webkit-animation: opacity 1s;
+	-ms-transition: opacity 1s;
+	-o-transition: opacity 1s;
 }
