--- a/public/css/engine.css
+++ b/public/css/engine.css
@@ -42,7 +42,8 @@ footer{
 	width:600px;
 }
 #modal-bg{
-	
+	display:none;
+	opacity:1;
 	position:absolute;
 	top:0px;
 	left:0px;
@@ -54,6 +55,9 @@ footer{
 	-webkit-animation: opacity 1s ease-in;
 	-ms-transition: opacity 1s ease-in;
 	-o-transition: opacity 1s ease-in;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-o-border-radius: 10px;
 }
 #modal-bg #level-select{
 	margin:30px auto;
@@ -68,7 +72,7 @@ footer{
 	-webkit-box-shadow: 0px 5px 10px #000000;
 	-o-box-shadow: 0px 5px 10px #000000;
 }
-.fade-in{
+.fade-in, #modal-bg.fade-in{
 	opacity:1;
 	transition: opacity 1s;
 	-moz-transition: opacity 1s;
@@ -76,7 +80,7 @@ footer{
 	-ms-transition: opacity 1s;
 	-o-transition: opacity 1s;
 }
-.fade-out{
+.fade-out, #modal-bg.fade-out{
 	opacity:0;
 	transition: opacity 1s;
 	-moz-transition: opacity 1s;
